# hellbox

./: .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  Pipfile  README.rst  index.html  lefthook.rc  lefthook.yml  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: docs.yml  publish.yml  release.yml  test.yml
_includes/: head.html
_posts/: 2014-06-13-welcome-to-jekyll.markdown
css/: main.css
design/: pipeline-multi-file.md
docs/: .gitignore  _config.yml  astro.config.mjs  index.html  install.sh  package-lock.json  package.json
docs/_includes/: head.html
docs/css/: main.css
docs/public/: CNAME
docs/src/components/: Code.astro  CopyButton.svelte
docs/src/layouts/: Layout.astro
docs/src/pages/: index.astro
docs/src/styles/: global.css
example/: Hellfile.py  requirements.txt
hellbox/: __init__.py  __version__.py  autoimporter.py  chute.py  hellbox.py  runner.py  source_file.py  task.py
hellbox/chutes/: chute.py  composite.py  read_files.py  write_files.py
hellbox/test/: chute_test.py  mock.py  test_hellbox.py  test_task.py
test/: chute_test.py  mock.py  test_chute.py  test_hellbox.py  test_task.py
tests/: mock.py  test_autoimporter.py  test_chute.py  test_hellbox.py  test_runner.py  test_source_file.py  test_task.py
tests/chutes/: test_chute.py  test_write_files.py
