[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hellbox"
dynamic = ["version"]
description = "Build system for font development."
readme = "README.rst"
license = {text = "MIT"}
authors = [{name = "Jack Jennings", email = "jack@standard-library.com"}]
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/hellboxpy/hellbox"

[tool.setuptools.dynamic]
version = {attr = "hellbox.__version__.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests*"]

[dependency-groups]
dev = [
    "lefthook>=2.1.6",
    "mdformat>=0.7.17",
    "pytest>=8,<10",
    "ruff>=0,<1",
    "ty>=0,<1",
    "twine>=6,<7",
    "wheel>=0,<1",
]
