[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68" ]

[project]
name = "hellbox"
version = "0.1.0"
description = "Build system for font development."
readme = "README.rst"
license = { text = "MIT" }
authors = [ { name = "Jack Jennings", email = "jack@standard-library.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [ "ruff>=0,<1", "ty>=0,<1" ]
urls.Homepage = "https://github.com/hellboxpy/hellbox"

[dependency-groups]
dev = [
  "commitizen>=4.16.2",
  "lefthook>=2.1.6",
  "mdformat>=0.7.17",
  "pyproject-fmt>=2.21.2",
  "pytest>=8,<10",
  "ruff>=0,<1",
  "twine>=6,<7",
  "ty>=0,<1",
  "wheel>=0,<1",
]

[tool.setuptools]
packages.find.exclude = [ "tests*" ]
